# IncrediBoard

./: .gitignore  Makefile  README
Boards/IB1/: Descriptors.c  Descriptors.h  KeyboardDefinition.h  Matrix.h  PlatformBoardSpecific.h  PlatformSpecific.cpp  PlatformSpecific.h  PlatformTeensy.cpp  PlatformTeensy.h  UsbInterface.cpp  main.cpp  makefile
Boards/IB1Teensy3/: CMakeLists.txt  KeyboardDefinition.h  Makefile  PlatformBoardSpecific.h  teensyduino.cmake
Boards/IB2/: Descriptors.c  KeyboardDefinition.h  PlatformBoardSpecific.h  PlatformTeensy.cpp  PlatformTeensy.h  UsbInterface.cpp  makefile
Boards/IB3/: Descriptors.c  KeyboardDefinition.h  Matrix.h  PlatformBoardSpecific.h  PlatformSpecific.cpp  PlatformSpecific.h  main.cpp  makefile
Boards/IB4/: CMakeLists.txt  Matrix.h  PlatformBoardSpecific.h
Boards/IB5/: CMakeLists.txt  KeyboardDefinition.h  Matrix.h  PlatformBoardSpecific.h  teensyduino.cmake
Boards/IB6/: README.txt
Boards/IB6/Left/: KeyboardDefinition.h  Matrix.h  PlatformBoardSpecific.h  makefile
Boards/IB6/Numpad/: Matrix.h  PlatformBoardSpecific.h  makefile
Boards/IB6/Right/: Matrix.h  PlatformBoardSpecific.h  makefile
Boards/IB7/: Matrix.h  PlatformBoardSpecific.h  README.txt  makefile
Boards/IB8/: Matrix.h  PlatformBoardSpecific.h  README.txt  makefile
Boards/T3Test/: CMakeLists.txt  FlasherComponent.h  KeyboardDefinition.h  Makefile  Matrix.h  PlatformBoardSpecific.h  build.cmd  teensyduino.cmake
Boards/TestBoardAvr/: Descriptors.c  PlatformTeensy.cpp  PlatformTeensy.h  TestBoard.h  UsbInterface.cpp  main.cpp  makefile
Core/: Board.h  BoardController.cpp  BoardController.cpp.UNUSED  BoardController.h  BoardState.h  BootloaderJumpComponent.h  Column.h  Console.h  ConsoleComponent.h  ConsoleDispatcher.h  ConsoleLister.h  Decorators.h  FixedArray.h  FixedPoint.h  Key.h  KeyClasses.h  KeyCodes.h  KeyValues.h  KeyValuesLufa.h  MatrixComponent.h  MatrixProcessor.h  MouseState.cpp  MouseState.h  Platform.h  ProcessRow.h  Row.h  SuperModifier.h  UsbComponent.h  UsbInterface.h  UsbMouseComponent.h  Vector2.h  VerifyColumnCount.h  main.cpp
